# pebbles

./: AGENT.md  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.opencode/agents/: pebbler.md
.opencode/commands/: describe.md  plan.md
.opencode/plans/: tree-view-implementation.md
.pebbles/: config.toml  db.json
.pebbles/changes/: 1d47.md  1dut.md  wijr.md  zxun.md
docs/: WORKFLOW.md  timers.md
plans/: CONVERT.md
src/: cli.rs  config.rs  db.rs  id.rs  idish.rs  lib.rs  main.rs  markdown_store.rs  models.rs  repository.rs  table.rs  template.rs
src/commands/: approve.rs  block.rs  build.rs  cleanup.rs  completions.rs  current.rs  delete.rs  doctor.rs  done.rs  edit.rs  init.rs  intake.rs  list.rs  log.rs  migrate.rs  mod.rs  new.rs  plan.rs  ready.rs  show.rs  start.rs  status.rs  timer.rs  update.rs  work.rs
src/harness/: mod.rs  opencode.rs
src/vcs/: git.rs  jujutsu.rs  mod.rs
templates/: new_issue.md
templates/opencode/: implement.md  intake.md  plan.md
templates/opencode/agents/: pebbler.md
templates/opencode/commands/: describe.md  plan.md
tests/: list_invalid_markdown.rs  migrate_command.rs
