[package]
name = "pebbles"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dialoguer = "0.11"

# Database
deeb = "0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
rand = "0.8"

# Config
toml = "0.8"

# Other
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
