[package]
name = "pebbles"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/drusellers/pebbles"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dialoguer = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
rand = "0.8"

# Config
toml = "0.8"

# Other
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
